added DSP, not working. Should check if the logic for Tetris Controller is well implemented. If still not working, go back to version w/out DSP

--- a/VGA_try/constraints.ucf
+++ b/VGA_try/constraints.ucf
@@ -18,3 +18,17 @@ NET PIXEL_DATA[4] LOC= L14;
 NET PIXEL_DATA[5] LOC= L13;
 NET PIXEL_DATA[6] LOC= N17;
 NET PIXEL_DATA[7] LOC= R17;
+net ANODE[0] loc=F17;
+net ANODE[1] loc=H17;
+net ANODE[2] loc=C18;
+net ANODE[3] loc=F15;
+net SEG1[7] loc=L18;
+net SEG1[6] loc=F18;
+net SEG1[5] loc=D17;
+net SEG1[4] loc=D16;
+net SEG1[3] loc=G14;
+net SEG1[2] loc=J17;
+net SEG1[1] loc=H14;
+net SEG1[0] loc=C17;
+net tSDA loc = P11;
+net tSCL loc = R12;
